[gd_scene load_steps=5 format=3 uid="uid://b0s4hl7u5qa5r"]

[ext_resource type="Script" path="res://components/uiButton/uiButtonsInGame.gd" id="1_hjl6a"]
[ext_resource type="Script" path="res://addons/fontawesome/FontAwesome.gd" id="2_mywkn"]
[ext_resource type="FontFile" uid="uid://c1x37tqs8bpaa" path="res://addons/fontawesome/fonts/fa-solid-900.woff2" id="3_ewia8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s2fu7"]
bg_color = Color(0.00784314, 0.121569, 0.188235, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.85098, 0.423529, 0.423529, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[node name="uiButtonsInGame" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_right = 360.0
grow_vertical = 0
script = ExtResource("1_hjl6a")
setsButton = "startTimer"
metadata/_edit_group_ = true

[node name="onShowCard" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="onShowCard"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -30.0
offset_right = 62.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="skip" type="Button" parent="onShowCard/HBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_s2fu7")
theme_override_styles/hover = SubResource("StyleBoxFlat_s2fu7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_s2fu7")
theme_override_styles/disabled = SubResource("StyleBoxFlat_s2fu7")
theme_override_styles/focus = SubResource("StyleBoxFlat_s2fu7")

[node name="FontAwesome" type="Label" parent="onShowCard/HBoxContainer/skip"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -37.0
offset_right = 24.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
auto_translate = false
localize_numeral_system = false
theme_override_colors/font_color = Color(0.658824, 0.0431373, 0.266667, 1)
theme_override_fonts/font = ExtResource("3_ewia8")
theme_override_font_sizes/font_size = 30
text = ""
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_mywkn")
icon_size = 30
icon_name = "forward-step"

[node name="accept" type="Button" parent="onShowCard/HBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_s2fu7")
theme_override_styles/hover = SubResource("StyleBoxFlat_s2fu7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_s2fu7")
theme_override_styles/disabled = SubResource("StyleBoxFlat_s2fu7")
theme_override_styles/focus = SubResource("StyleBoxFlat_s2fu7")

[node name="FontAwesome" type="Label" parent="onShowCard/HBoxContainer/accept"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -37.0
offset_right = 32.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
auto_translate = false
localize_numeral_system = false
theme_override_colors/font_color = Color(0.2, 0.721569, 0.392157, 1)
theme_override_fonts/font = ExtResource("3_ewia8")
theme_override_font_sizes/font_size = 30
text = ""
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_mywkn")
icon_size = 30
icon_name = "check"

[node name="onStartTimer" type="Control" parent="."]
visible = false
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="onStartTimer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2

[node name="show" type="Button" parent="onStartTimer/HBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_s2fu7")
theme_override_styles/hover = SubResource("StyleBoxFlat_s2fu7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_s2fu7")
theme_override_styles/disabled = SubResource("StyleBoxFlat_s2fu7")
theme_override_styles/focus = SubResource("StyleBoxFlat_s2fu7")

[node name="FontAwesome" type="Label" parent="onStartTimer/HBoxContainer/show"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -25.0
offset_right = 24.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
auto_translate = false
localize_numeral_system = false
theme_override_colors/font_color = Color(0.658824, 0.0431373, 0.266667, 1)
theme_override_fonts/font = ExtResource("3_ewia8")
theme_override_font_sizes/font_size = 30
text = ""
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_mywkn")
icon_size = 30
icon_name = "hourglass-start"

[node name="onShow" type="Control" parent="."]
visible = false
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="onShow"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2

[node name="show" type="Button" parent="onShow/HBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_s2fu7")
theme_override_styles/hover = SubResource("StyleBoxFlat_s2fu7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_s2fu7")
theme_override_styles/disabled = SubResource("StyleBoxFlat_s2fu7")
theme_override_styles/focus = SubResource("StyleBoxFlat_s2fu7")

[node name="FontAwesome" type="Label" parent="onShow/HBoxContainer/show"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -25.0
offset_right = 24.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
auto_translate = false
localize_numeral_system = false
theme_override_colors/font_color = Color(0.658824, 0.0431373, 0.266667, 1)
theme_override_fonts/font = ExtResource("3_ewia8")
theme_override_font_sizes/font_size = 30
text = ""
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_mywkn")
icon_size = 30
icon_name = "eye"

[connection signal="pressed" from="onShowCard/HBoxContainer/skip" to="." method="_on_button_pressed" binds= ["skip"]]
[connection signal="pressed" from="onShowCard/HBoxContainer/accept" to="." method="_on_button_pressed" binds= ["accept"]]
[connection signal="pressed" from="onStartTimer/HBoxContainer/show" to="." method="_on_button_pressed" binds= ["startTimer"]]
[connection signal="pressed" from="onShow/HBoxContainer/show" to="." method="_on_button_pressed" binds= ["show"]]
